# test

./: CMakeLists.txt  Doxyfile  Screencast from 23-04-24 09:54:36.webm  test
include/: greetings.h  logic.h
lib/libdyn/: CMakeLists.txt
lib/libdyn/include/: shared.h
lib/libdyn/src/: shared.c
lib/libsta/: CMakeLists.txt
lib/libsta/include/: static.h
lib/libsta/src/: static.c
src/: greetings.c  logic.c  main.c
tests/: CMakeLists.txt
tests/unit/: test_unit_program.c
